5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1717_2527.log
== TEST (2019-05-15 20:27:01) 
-- CODE:
num=int(input("numero: "))
a=0
soma=0
while(a < num):
	soma=soma + a
	a=a+1
	print("PERFEITO")
	print("NA0 PERFEITO")
-- OUTPUT:
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
NA0 PERFEITO
PERFEITO
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:27:59) 
-- CODE:
num=int(input("numero: "))
a=0

while(a < num):
	a=a+1
	print("PERFEITO")
else:	
	print("NA0 PERFEITO")
-- OUTPUT:
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
P
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:42:11) 
-- CODE:
num=int(input("numero: "))
a=1
soma=0
while(a < num):
	if(num%a==0):
		soma=soma+a
		a=a+1
if(soma==num):		
	print("PERFEITO")
else:	
	print("NA0 PERFEITO")
-- OUTPUT:
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
PERFEITO
P
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:42:50) 
-- CODE:
num=int(input("numero: "))
a=1
soma=0
while(a < num):
		soma=soma+a
		a=a+1
if(soma==num):		
	print("PERFEITO")
else:	
	print("NA0 PERFEITO")
-- OUTPUT:
NA0 PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:44:15) 
-- CODE:
num=int(input("numero: "))
a=1
soma=0
while(a < num):
		soma=soma+a
		a=a+1
	if(soma==num):		
		print("PERFEITO")
	else:	
		print("NA0 PERFEITO")
print(a)		
-- ERROR:
File "XXXX", line 7
    if(soma==num):		
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:44:46) 
-- CODE:
num=int(input("numero: "))
a=1
soma=0
while(a < num):
		soma=soma+a
		a=a+1
if(soma==num):		
	print("PERFEITO")
else:	
	print("NA0 PERFEITO")
print(a)		
-- OUTPUT:
NA0 PERFEITO
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:45:30) 
-- CODE:
num=int(input("numero: "))
a=1
soma=0
while(a < num):
		soma=soma+a
		a=a+1
if(soma==num):		
	print("PERFEITO")
else:	
	print("NA0 PERFEITO")
print(soma)		
-- OUTPUT:
NA0 PERFEITO
122760
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
